--- a/src/assets/theme-chalk/col.scss
+++ b/src/assets/theme-chalk/col.scss
@@ -1,7 +1,11 @@
-.el-col {
+@import './mixins/mixins.scss';
+
+
+@include b(col) {
     float: left;
     box-sizing: border-box;
 }
+
 
 @for $i from 0 through 24 {
     .el-col-#{$i} {
@@ -23,11 +27,12 @@
     }
 }
 
-@media only screen and (max-width: 767px) {
+.el-col-sx-0 {
+    display: none;
+}
+
+@include res(xs) {
     @for $i from 0 through 24 {
-        .el-col-sx-0 {
-            display: none;
-        }
 
         .el-col-xs-#{$i} {
             width: $i / 24 * 100%;
@@ -49,11 +54,12 @@
     }
 }
 
-@media only screen and (min-width: 768px) {
+.el-col-sm-0 {
+    display: none;
+}
+@include res(sm) {
     @for $i from 0 through 24 {
-        .el-col-sm-0 {
-            display: none;
-        }
+
 
         .el-col-sm-#{$i} {
             width: $i / 24 * 100%;
@@ -75,11 +81,12 @@
     }
 }
 
-@media only screen and (min-width: 992px) {
+.el-col-md-0 {
+    display: none;
+}
+@include res(md) {
     @for $i from 0 through 24 {
-        .el-col-md-0 {
-            display: none;
-        }
+
 
         .el-col-md-#{$i} {
             width: $i / 24 * 100%;
@@ -101,11 +108,12 @@
     }
 }
 
-@media only screen and (min-width: 1200px) {
+.el-col-lg-0 {
+    display: nones;
+}
+@include res(lg) {
     @for $i from 0 through 24 {
-        .el-col-lg-0 {
-            display: nones;
-        }
+
 
         .el-col-lg-#{$i} {
             width: $i / 24 * 100%;
@@ -127,11 +135,12 @@
     }
 }
 
-@media only screen and (min-width: 1920px) {
+.el-col-xl-0 {
+    display: none;
+}
+
+@include res(xl) {
     @for $i from 0 through 24 {
-        .el-col-xl-0 {
-            display: none;
-        }
 
         .el-col-xl-#{$i} {
             width: $i / 24 * 100%;
