--- a/src/assets/theme-chalk/display.scss
+++ b/src/assets/theme-chalk/display.scss
@@ -1,68 +1,12 @@
+@import './mixins/mixins.scss';
+
 .hidden {
-    &-xs-only {
-        @media only screen and (max-width: 767px) {
-            display: none;
-        }
-    }
 
-    &-sm-only {
-        @media only screen and(min-width: 786px) and (max-width: 992px) {
-            display: none;
-        }
-    }
-
-    &-sm-and-down {
-        @media only screen and (max-width: 992px) {
-            display: none;
-        }
-    }
-
-    &-sm-and-up {
-        @media only screen and (min-width: 992px) {
-            display: none;
-        }
-    }
-
-
-    &-md-only {
-        @media only screen and(min-width: 992px) and (max-width: 1200px) {
-            display: none;
-        }
-    }
-
-    &-md-and-down {
-        @media only screen and (max-width: 1200px) {
-            display: none;
-        }
-    }
-
-    &-md-and-up {
-        @media only screen and (min-width: 1200px) {
-            display: none;
-        }
-    }
-
-    &-lg-only {
-        @media only screen and(min-width: 1200px) and (max-width: 1920px) {
-            display: none;
-        }
-    }
-
-    &-lg-and-down {
-        @media only screen and (max-width: 1920px) {
-            display: none;
-        }
-    }
-
-    &-lg-and-up {
-        @media only screen and (min-width: 1920px) {
-            display: none;
-        }
-    }
-
-    &-xl-only {
-        @media only screen and (max-width: 1920px) {
-            display: none;
+    @each $break-points-name, $value in $--breakpoints-spec {
+        &-#{$break-points-name} {
+            @include res($break-points-name, $--breakpoints-spec) {
+                display: none;
+            }
         }
     }
 }
