--- a/src/assets/theme-chalk/mixins/mixins.scss
+++ b/src/assets/theme-chalk/mixins/mixins.scss
@@ -1,4 +1,5 @@
 @import './config.scss';
+@import '../common/var.scss';
 
 // BEM
 @mixin b($block) {
@@ -33,3 +34,18 @@
         }
     }
 }
+
+// 响应式
+@mixin res($key, $map: $--breakpoints) {
+    @if map-has-key($map, $key) {
+        @media only screen and #{inspect(map-get($map, $key))} {
+            @content;
+        }
+    }
+
+    @else {
+        @warn "undefined points: `#{map}`";
+    }
+}
+
+;
