--- a/src/assets/theme-chalk/row.scss
+++ b/src/assets/theme-chalk/row.scss
@@ -1,8 +1,8 @@
-@import '../mixins/mixins.scss';
-@import '../mixins/utils.scss';
+@import './mixins/mixins.scss';
+@import './mixins/utils.scss';
 
 @include b(row) {
-
+    box-sizing: border-box;
     @include utils-clearfix;
 
     @include m(flex) {
