--- a/src/assets/theme-chalk/index.scss
+++ b/src/assets/theme-chalk/index.scss
@@ -1,2 +1,7 @@
 @import './col.scss';
 @import './row.scss';
+@import './container.scss';
+@import './header.scss';
+@import './aside.scss';
+@import './footer.scss';
+@import './main.scss';
