--- a/src/assets/theme-chalk/common/var.scss
+++ b/src/assets/theme-chalk/common/var.scss
@@ -1,3 +1,16 @@
+/*
+Header,
+Main,
+Footer
+组件的padding
+*/
+$--header-padding: 0 20px !default;
+$--main-padding: 0 20px !default;
+$--footer-padding: 0 20px !default;
+
+/*
+响应式
+*/
 $--sm: 768px !default;
 $--md: 992px !default;
 $--lg: 1200px !default;
