--- a/src/assets/theme-chalk/container.scss
+++ b/src/assets/theme-chalk/container.scss
@@ -2,9 +2,10 @@
 
 // el-container
 @include b(container) {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
-
+    flex: 1;
     // is-vertical
     @include when(vertical) {
         flex-direction: column;
