--- a/src/assets/theme-chalk/footer.scss
+++ b/src/assets/theme-chalk/footer.scss
@@ -1,3 +1,7 @@
 @import './mixins/mixins.scss';
-
-@include b(footer) {}
+@import './common/var.scss';
+@include b(footer) {
+    box-sizing: border-box;
+    padding: $--footer-padding;
+    flex-shrink: 0;
+}
