--- a/src/assets/theme-chalk/common/var.scss
+++ b/src/assets/theme-chalk/common/var.scss
@@ -9,6 +9,49 @@ $--main-padding: 0 20px !default;
 $--footer-padding: 0 20px !default;
 
 /*
+主题色
+---------------------*/
+$--color-primary: #409EFF !default;
+$--color-primary-light-1: mix($--color-white, $--color-primary, 10%) !default;
+$--color-primary-light-2: mix($--color-white, $--color-primary, 20%) !default;
+$--color-primary-light-3: mix($--color-white, $--color-primary, 30%) !default;
+$--color-primary-light-4: mix($--color-white, $--color-primary, 40%) !default;
+$--color-primary-light-5: mix($--color-white, $--color-primary, 50%) !default;
+$--color-primary-light-6: mix($--color-white, $--color-primary, 60%) !default;
+$--color-primary-light-7: mix($--color-white, $--color-primary, 70%) !default;
+$--color-primary-light-8: mix($--color-white, $--color-primary, 80%) !default;
+$--color-primary-light-9: mix($--color-white, $--color-primary, 90%) !default;
+
+$--color-white: #ffffff !default;
+$--color-black: #000000 !default;
+// 辅助色
+// success
+$--color-success: #67c23a !default;
+$--color-success-light: mix($--color-white, $--color-success, 80%) !default;
+$--color-success-lighter: mix($--color-white, $--color-success, 90%) !default;
+// warning
+$--color-warning: #E6A23C !default;
+$--color-warning-light: mix($--color-white, $--color-warning, 80%) !default;
+$--color-warning-lighter: mix($--color-white, $--color-warning, 90%) !default;
+// danger
+$--color-danger: #F56C6C !default;
+$--color-danger-light: mix($--color-white, $--color-danger, 80%) !default;
+$--color-danger-lighter: mix($--color-white, $--color-danger, 90%) !default;
+// info
+$--color-info: #909399 !default;
+$--color-info-light: mix($--color-white, $--color-info, 80%) !default;
+$--color-info-lighter: mix($--color-white, $--color-info, 90%) !default;
+
+// 中性色
+$--color-text-primary: #303133 !default; // 主要文字
+$--color-text-regular: #606266 !default; // 常规文字
+$--color-text-secondary: #909399 !default; // 次要文字
+$--color-text-placeholder: #C0C4CC !default; // 占位文字
+$--border-color-base: #DCDFE6 !default; // 一级边框
+$--border-color-light: #E4E7ED !default; // 二级边框
+$--border-color-lighter: #EBEEF5 !default; // 三级边框
+$--border-color-extra-lighte: #F2F6FC !default; // 四级边框
+/*
 响应式
 */
 $--sm: 768px !default;
