--- a/src/assets/theme-chalk/common/var.scss
+++ b/src/assets/theme-chalk/common/var.scss
@@ -55,6 +55,28 @@ $--border-color-lighter: #EBEEF5 !default; // 三级边框
 $--border-color-extra-lighte: #F2F6FC !default; // 四级边框
 
 /*
+-------------------------字体
+*/
+$--font-size-extra-large: 20px !default; // 主标题
+$--font-size-large: 18px !default; // 主标题
+$--font-size-medium: 16px !default; // 小标题
+$--font-size-base: 14px !default; // 正文
+$--font-size-small: 13px !default; // 正文(小)
+$--font-size-extra-small: 12px !default; // 正文(小)
+
+/*
+----------------------------边框
+*/
+$--border-wdith-base: 1px !default;
+$--border-style-base: solid !default;
+$--border-base: $--border-wdith-base $--border-style-base !default;
+$--border-radius-base: 4px !default; // 大圆角
+$--border-radius-small: 2px !default; // 小圆角
+$--border-radius-zero: 0px !default; // 无圆角
+$--box-shadow-base: 0 2px 4px rgba(0, 0, 0, .12),
+0 0 6px rgba(0, 0, 0, .04) !default;
+$--box-shadow-light: 0 2px 12px 0 rgba(0, 0, 0, 0.1) !default;
+/*
 响应式
 */
 $--sm: 768px !default;
