--- a/src/assets/theme-chalk/common/var.scss
+++ b/src/assets/theme-chalk/common/var.scss
@@ -57,6 +57,7 @@ $--border-color-extra-lighte: #F2F6FC !default; // 四级边框
 /*
 -------------------------字体
 */
+$--font-path: 'fonts';
 $--font-size-extra-large: 20px !default; // 主标题
 $--font-size-large: 18px !default; // 主标题
 $--font-size-medium: 16px !default; // 小标题
