--- a/src/assets/theme-chalk/icon.scss
+++ b/src/assets/theme-chalk/icon.scss
@@ -15,7 +15,13 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.el-icon--right{
+    margin-left: 5px;
+}
 
+.el-icon--left{
+    margin-right: 5px;
+}
 
 .el-icon-ice-cream-round:before {
     content: "\e6a0";
