--- a/src/assets/theme-chalk/mixins/utils.scss
+++ b/src/assets/theme-chalk/mixins/utils.scss
@@ -16,3 +16,10 @@
         }
     }
 }
+
+@mixin utils-user-select($value) {
+    user-select: $value;
+    -moz-user-select: $value;
+    -webkit-user-select: $value;
+    -ms-user-select: $value;
+}
